# PhoneVR

./: .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
apps/ios-client/: project.yml
apps/ios-client/PhoneVR/: Info.plist  LaunchScreen.storyboard
apps/ios-client/PhoneVR/PhoneVR/Sources/App/: PhoneVRApp.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/Models/: VRAppState.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/Rendering/: VRRenderer.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/Rendering/Shaders/: VRShaders.metal
apps/ios-client/PhoneVR/PhoneVR/Sources/Services/HandTracking/: HandTrackingService.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/Services/Network/: NetworkService.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/Services/Streaming/: StreamingService.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/Services/Tracking/: SensorFusionEngine.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/Services/Video/: CameraService.swift  VideoEncoderService.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/UI/Settings/: SettingsView.swift
apps/ios-client/PhoneVR/PhoneVR/Sources/UI/Views/: ContentView.swift
apps/launcher/: CMakeLists.txt
apps/launcher/include/: LauncherWindow.h  ServerManager.h
apps/launcher/src/: LauncherWindow.cpp  ServerManager.cpp  main.cpp
apps/steamvr-driver/: CMakeLists.txt
apps/steamvr-driver/include/: DriverBase.h  DriverFactory.h
apps/steamvr-driver/include/Devices/: ControllerDevice.h  HeadsetDevice.h
apps/steamvr-driver/include/Input/: InputComponent.h
apps/steamvr-driver/include/Settings/: SettingsManager.h
apps/steamvr-driver/resources/: driver.vrdrivermanifest
apps/steamvr-driver/src/: DriverBase.cpp  DriverFactory.cpp
apps/steamvr-driver/src/Devices/: ControllerDevice.cpp  HeadsetDevice.cpp
apps/steamvr-driver/src/Input/: InputComponent.cpp
apps/steamvr-driver/src/Settings/: SettingsManager.cpp
apps/windows-host/: CMakeLists.txt
apps/windows-host/include/: Config.h  NetworkReceiver.h  StatsCollector.h
apps/windows-host/include/Network/: StreamingProtocol.h
apps/windows-host/include/OpenVR/: OpenVRIntegration.h
apps/windows-host/include/OpenXR/: OpenXRIntegration.h
apps/windows-host/include/Render/: D3D12Renderer.h  StereoRenderTarget.h
apps/windows-host/include/Video/: FrameProcessor.h  HardwareDecoder.h
apps/windows-host/src/: main.cpp
apps/windows-host/src/Core/: Config.cpp  StatsCollector.cpp
apps/windows-host/src/Network/: NetworkReceiver.cpp  StreamingProtocol.cpp
apps/windows-host/src/OpenVR/: OpenVRIntegration.cpp
apps/windows-host/src/OpenXR/: OpenXRIntegration.cpp
apps/windows-host/src/Render/: D3D12Renderer.cpp  StereoRenderTarget.cpp
apps/windows-host/src/Video/: FrameProcessor.cpp  HardwareDecoder.cpp
docs/: architecture.md
docs/api/: protocol.md
shared/cpp/: CMakeLists.txt  PhoneVRNetwork.cpp  PhoneVRNetwork.h  PhoneVRTypes.h
shared/proto/: phonevr.proto
shared/swift/: PhoneVRNetwork.swift  PhoneVRTypes.swift
tests/: CMakeLists.txt
tests/shared/: test_crc32.cpp
tests/steamvr/: test_driver.cpp
tests/windows/: test_network.cpp
